<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:orientation="vertical"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/step_description_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/playerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp" />

            <ImageView
                android:id="@+id/iv_step_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/step_image_description"/>

            <TextView
                android:id="@+id/tv_step_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                android:layout_margin="5dp"
                android:text="@string/step_description_example"/>

            <Button
                android:id="@+id/btn_next_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textSize="15sp"
                android:text="@string/next_step_example"/>

            <Button
                android:id="@+id/btn_previous_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textSize="15sp"
                android:text="@string/previous_step_example"/>


            <Button
                android:id="@+id/btn_add_to_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textSize="15sp"
                android:text="@string/add_widget_example"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_ingredients_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

<!--</ScrollView>-->