<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/checkbox_on_background"
        android:layout_gravity="center"
        android:padding="5dp"
        android:contentDescription="@string/ingredient_image_description"/>

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="5dp"
        android:text="@string/ingredient_quantity_example"/>

    <TextView
        android:id="@+id/tv_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:padding="5dp"
        android:text="@string/ingredient_measure_example" />

    <TextView
        android:id="@+id/tv_ingredient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:text="@string/ingredient_name_example"/>


</LinearLayout>