<resources>
    <string name="app_name">BakingApp</string>

    <!-- Fragment Step Description -->
    <string name="step_image_description">Recipe Image</string>

    <!-- Fragment Step List -->
    <string name="ingredients_step_title">Recipe Ingredients</string>

    <!-- Recipe Card -->
    <string name="recipe_image_description">Recipe Image</string>

    <!-- Recipe Ingredient Widget -->
    <string name="empty_widget_message">No recipe selected</string>
    <string name="widget_image_description">Recipe Ingredient Image</string>

    <!-- Fragment Step Description -->
    <string name="next_step_title">Go To Next Step:\n %1$s</string>
    <string name="previous_step_title">Go To Previous Step:\n %1$s</string>

    <!-- Ingredient Item -->
    <string name="ingredient_image_description">Ingredient Image</string>


    <!-- Examples -->

    <!-- Ingredients List Example -->
    <string name="ingredient_quantity_example">2</string>
    <string name="ingredient_measure_example">CUP</string>
    <string name="ingredient_name_example">Graham Cracker crumbs</string>

    <!-- Recipe Card Example -->
    <string name="recipe_name_example">Example Recipe 1</string>

    <!-- Step List Item Example -->
    <string name="step_name_example">EXAMPLE RECIPE STEP</string>

    <!-- Widget Ingredient Item Example -->
    <string name="widget_ingredient_quantity_example">1.5</string>
    <string name="widget_ingredient_measure_example">TSP</string>
    <string name="widget_ingredient_name_example">Salt</string>

    <!-- Fragment Step Description Example -->
    <string name="step_description_example">Example Step Description</string>
    <string name="next_step_example">Example Go To Next Step</string>
    <string name="previous_step_example">Example Go To Previous Step</string>
    <string name="add_widget_example">Add Recipe Ingredients to Widget</string>
</resources>
