<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/tv_ingredients_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients_step_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingLeft="5dp"
            android:layout_margin="10dp"/>

        <!-- A small divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_step_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</ScrollView>